--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -35,3 +36,6 @@ Icon
 .Spotlight-V100
 .Trashes
 
+/Laskin/build/
+/Laskin/nbproject/private/
+/QueryLanguage1/target/
